<resources>
    <string name="app_name">MyNews</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="my_news">MyNews</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="main_search">Search</string>
    <string name="travel_checkbox">Travel</string>
    <string name="entrepreneurs_checkbox">Entrepreneurs</string>
    <string name="business_checkbox">Business</string>
    <string name="sports_checkbox">Sports</string>
    <string name="arts_checkbox">Arts</string>
    <string name="politics_checkbox">Politics</string>
    <string name="search_btn_launch_search">Search</string>
    <string name="search_query_term">Search query term</string>

    <string name="menu_top_story">Top Story</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="menu_arts">Arts</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_business">Business</string>
    <string name="no_result">No result</string>
    <string name="enable_notification_once_per_day">Enable notification (once per day)</string>

    <string name="notification_message">You missed %d articles</string>
    <string name="arts">arts</string>
    <string name="business">business</string>
    <string name="technology">technology</string>

</resources>
