...
        android:layout_margin="12dp"
        android:text="@string/business_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_arts_checkbox" />

    <CheckBox
        android:id="@+id/cv_sports_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sports_checkbox"
        app:layout_constraintStart_toStartOf="@id/cv_guide_line_half"
        app:layout_constraintTop_toBottomOf="@+id/cv_politics_checkbox" />
...
