<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_guide_line_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_query_term" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/pastdate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:drawableEnd="@drawable/dropdown_arrow"
        android:drawableRight="@drawable/dropdown_arrow"
        app:layout_constraintEnd_toEndOf="@id/search_guide_line_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        style="@style/ClickableEditText"/>

    <Button
        android:id="@+id/futurdate_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:drawableEnd="@drawable/dropdown_arrow"
        android:drawableRight="@drawable/dropdown_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/til_search" />

    <com.example.mynews.search.SectionsCustomView
        android:id="@+id/cv_search_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/futurdate_tv" />

    <Button
        android:id="@+id/search_btn_launch_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_btn_launch_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_search_checkbox" />


</androidx.constraintlayout.widget.ConstraintLayout>