<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/main_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:title="@string/action_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
